Changed width of agenda to avoid wrapping

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -81,7 +81,7 @@ section.content ul {
 section.content dl.details {
   margin-left: auto;
   margin-right: auto;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 section.content dl.details dt {
